<resources>
    <string name="app_name">LoginActivity</string>
    <string name="Login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="god_bless_you">TextView</string>
    <string name="CGPA">CGPA</string>
    <string name="register_here">register_here</string>
    <string name="username">username</string>
    <string name="cgpa">CGPA</string>
    <string name="todo">TODO</string>
    <string name="staffid">Staff ID</string>
    <string name="coursework_mark">coursework_mark</string>
    <string name="welcome_to_login_system">WELCOME TO STUDENT MANAGEMENT AND LEARNING SYSTEM</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="value">VALUE </string>
    <string name="credit_hour">CREDIT HOUR</string>
    <string name="calculate">calculate</string>
    <string name="view_result">view result</string>
    <string name="subject">SUBJECT</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">RY43</string>
    <string name="text_title">Student In This Class</string>
    <string name="admin_task">Admin task</string>
    <string name="register_std">Register Student</string>
    <string name="view_existing_student">View Existing Student</string>
    <string name="delete">Delete</string>
    <string name="mc">Mobile Computing</string>
    <string name="nm">Network Modelling</string>
    <string name="NM">Network Management</string>
    <string name="cisco">Cisco</string>
    <string name="subject_list">SUBJECT LIST</string>
    <string name="name_of_related_topic">name of related topic</string>
    <string name="video_reference">Video Reference</string>
    <string name="search">Search</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="chapter_2">Chapter 2</string>
    <string name="chapter_3">Chapter 3</string>
    <string name="chapter_4">Chapter 4</string>
    <string name="chapter_5">Chapter 5</string>
    <string name="chapter_6">Chapter 6</string>
    <string name="ezproxy_unimap">Ezproxy Unimap</string>
    <string name="reference_desk">Reference Desk</string>
    <string name="purdue_libraries">Purdue Libraries</string>
    <string name="libraryspot">libraryspot</string>
    <string name="library_of_congress">Library of Congress</string>
    <string name="reference_side">Reference side</string>
    <string name="enter_student_name">Enter Student Name</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

</resources>
