<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.loginactivity.Net_modelling">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="197dp"
        android:layout_marginBottom="42dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/chapter_1"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/chapter_2"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/chapter_3"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/chapter_4"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/chapter_5"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/chapter_6"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="131dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_of_related_topic"
            android:inputType="textPersonName"
            android:labelFor="@+id/video" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/search"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="443dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="371dp"
        android:layout_height="104dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/lec1"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="252dp"
        android:layout_height="35dp"
        android:layout_marginEnd="116dp"
        android:layout_marginStart="16dp"
        android:text="@string/video_reference"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
