<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.loginactivity.Staff_option">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:layout_marginBottom="104dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_task"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/regisStd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/register_std"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="145dp" />

        <Button
            android:id="@+id/seeRtd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/view_existing_student" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/delete" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="183dp"
        android:layout_height="123dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/staff"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509"
        tools:ignore="ContentDescription" />

</android.support.constraint.ConstraintLayout>
