<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.loginactivity.Reference_source">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/images" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="onButtonClick"
            android:text="@string/ezproxy_unimap"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="onButtonClick"
            android:text="@string/reference_desk"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="onButtonClick"
            android:text="@string/library_of_congress"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="onButtonClick"
            android:text="@string/purdue_libraries"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/libraryspot"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
