<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.loginactivity.show">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="311dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/course"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="354dp"
            android:layout_marginBottom="232dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="onButtonClick"
                android:text="@string/nm"
                android:textAlignment="center"
                android:textSize="24sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="onButtonClick"
                android:text="@string/NM"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="onButtonClick"
                android:text="@string/cisco"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="onButtonClick"
                android:text="@string/mc"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
